# Senior-Design

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.txt  compile_commands.json  example.db  init.sh  schema_dump.sql
.github/workflows/: c-cpp.yml  github-pages.yml  macos-build.yml  test-build.yml  windows-build.yml
docs/: container.puml  container_cutlist.puml  context.puml
docs/C4/Component/: cutlist.puml  inventory_management.puml  sales.puml
docs/C4/System/: container.puml  context.puml
docs/Use/: inventory manager.puml  sales.puml  sawyer.puml
docs/interfaces/: class.puml  types.puml
include/: adjust_log_length_dialog.hpp  cookies.hpp  csv_importer.hpp  custom_cut_dialog.hpp  cutlist.hpp  db.hpp  firewood.hpp  interfaces.hpp  inventory.hpp  live_edge_slabs.hpp  logs.hpp  logtablemodel.hpp  lumber.hpp  main_window.hpp  mainwindow.h  mainwindow.hpp  manufacturable.hpp  multi_cut.hpp  project_editor.h  project_editor.hpp  sales.hpp  schema.hpp  slab_factory.hpp  slab_manufacturer.hpp  standard_cut_dialog.hpp  types.hpp  ui_logs.hpp  validate_log_length_dialog.hpp  wwhg_constants.hpp  wwhg_datamodel.hpp  wwhg_generator.hpp
include/domain/: cookie.hpp  cutlist.hpp  firewood.hpp  firewood_bundle.hpp  live_edge_slab.hpp  log.hpp  lumber.hpp  lumber_cutter.hpp  slab_cutter.hpp  types.hpp  units.hpp
include/infra/: bulk.hpp  connection.hpp  helpers.hpp  images.hpp  repository.hpp  unit_of_work.hpp
include/infra/mappers/: cookie_mapper.hpp  cutlist_mapper.hpp  firewood_mapper.hpp  live_edge_slab_mapper.hpp  log_mapper.hpp  lumber_mapper.hpp  view_helpers.hpp
include/sales/: generator.hpp  product.hpp
include/widgets/: LumberCuttingWindow.hpp  SlabCuttingWindow.hpp  dryingPopup.hpp  log_inventory.hpp  product_editing_widget.hpp  slabSurfacingPopup.hpp
src/: adjust_log_length_dialog.cpp  cookies.cpp  csv_importer.cpp  cutlist.cpp  cutlist.hpp  db.cpp  firewood.cpp  inventory.cpp  live_edge_slabs.cpp  logs.cpp  logtablemodel.cpp  lumber.cpp  main.cpp  main.ui  main_testing.cpp  main_window.cpp  mainwindow.cpp  project_editor.cpp  sales.cpp  standard_cut_dialog.cpp  startup.cpp  ui_logs.cpp  validate_log_length_dialog.cpp
src/domain/: log.cpp
src/include/: db.hpp  logs.hpp  types.hpp
src/infra/: connection.cpp  unit_of_work.cpp
src/sales/: mapping.cpp
src/widgets/: LumberCuttingWindow.cpp  SlabCuttingWindow.cpp  log_inventory.cpp
tests/: CMakeLists.txt  test_logs.cpp
toolchains/: windows-mingw.cmake
ui/: adjust_log_length_dialog.ui  cutlist.ui  firewoodDialog.ui  inventory.ui  logsFilterViewWidget.ui  mainwindow.ui  projectEditor.ui  sales.ui  sawyerInterface.ui  slabCuttingWindow.ui  standard_cut_dialog.ui  validate_log_length_dialog.ui
ui/widgets/: log_inventory.ui
